# flecs-rpc

./: CMakeLists.txt  NOTE  README  flecs.ice
agent/: CMakeLists.txt  agent-common.h  agent.ice  agentI.cpp  agentI.h  client.cpp  config.agent.client  config.agent.server  log4j.properties  server.cpp
client/: .client-big-data.cpp.swp  CMakeLists.txt  client-big-data.cpp  client-delete.cpp  client-get.cpp  client-local.cpp  client-put.cpp  client-put.cpp.bak  client-rand-get-append.cpp  client.cpp  config.client  log4j.properties
common/: util.cpp  util.h
data/: CMakeLists.txt  filelist-size
data/check-consistency/: CMakeLists.txt  ccheck.cpp
data/gen-fileset/: CMakeLists.txt  filelist-5  filelist-7981  gen-fileset.cpp
interface/: CMakeLists.txt  flecs.cpp  flecs.h  flecs.ice
launcher/: CMakeLists.txt  flecs.trigger.client  flecs.trigger.regen-fileset  flecs.trigger.server  launcher.cpp  log4j.properties
master/: CMakeLists.txt  log4j.properties  main.cpp  masterI.cpp  masterI.h
misc/: polynesia-batch.sh  polynesia-flecs-build.sh  polynesia-regen-fileset.sh  polynesia-restart-flecs-agent-launcher.sh  polynesia-restart-flecs-agent-server.sh  punch-firewall.sh  run-clients.sh  wait-and-exec
misc/flecs10-20-50/: batch.sh  flecs-build.sh  regen-fileset.s  regen-fileset.sh  restart-flecs-agent-launcher.sh
misc/not-used/: _run-flecs.sh  run-clients.sh  run-flecs.sh
misc/polymoa/: batch.sh  punch-firewall.sh  regen-fileset.sh  restart-flecs-agent-launcher.sh  update-build-working-copy.sh  update-build.sh
misc/polynesia1-2-5/: batch.sh  check-alive-ip-on-polynesia-subnet.sh  flecs-build.sh  regen-fileset.sh  restart-flecs-agent-launcher.sh  update-build-working-copy.sh  update-build.sh
plot/: 10.add-time-in-sec  20.plot-ana-send  plot-perf-by-num-servers.gnuplot
practice/hiredis/: CMakeCache.txt  CMakeLists.txt  Makefile  NOTE  cmake_install.cmake  copyright  dump.rdb  example  example.c
server/: CMakeLists.txt  c2sI.cpp  c2sI.h  config.server  container-rep-no-const.cpp  container-rep-partial.cpp  container-rep-redis.cpp  container-rep-strong-const.cpp  container.cpp  container.h  globallock.cpp  globallock.h  log4j.properties  main.cpp  s2sI.cpp  s2sI.h  server-common.cpp  server-common.h  server-main.cpp  server.cpp  server.h  serverI.cpp  serverI.h  sm2sI.cpp  sm2sI.h
