CMAKE_MINIMUM_REQUIRED (VERSION 2.6 FATAL_ERROR)

PROJECT (FleCS)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

LIST (APPEND CMAKE_CXX_FLAGS "-Wall -Werror")

#SET (CMAKE_BUILD_TYPE Debug)

ADD_SUBDIRECTORY (interface)
ADD_SUBDIRECTORY (master)
ADD_SUBDIRECTORY (server)
ADD_SUBDIRECTORY (client)

ADD_SUBDIRECTORY (data)
