ADD_EXECUTABLE (flecs-launcher launcher.cpp)

TARGET_LINK_LIBRARIES (flecs-launcher log4cxx)

CONFIGURE_FILE (log4j.properties ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
CONFIGURE_FILE (flecs.trigger.agent ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
CONFIGURE_FILE (flecs.trigger.master ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
CONFIGURE_FILE (flecs.trigger.server ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
CONFIGURE_FILE (flecs.trigger.client ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
